--- a/1-ajax/index.html
+++ b/1-ajax/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Ajax - Javascript</h1>
-   
+   <button onclick="pobierzDane()">Pobierz Dane</button>
     <script src="js/ajax-skonczona-wersja.js"></script>
 </body>
 
