to samo co w ajaxie tylko z pomocą jQuery
to samo co w ajaxie tylko z pomocą jQuery

--- a/1-ajax/index.html
+++ b/1-ajax/index.html
@@ -2,15 +2,23 @@
 <html lang="pl">
 
 <head>
-    <meta charset="utf-8" />
-    <title>AJAX - Javascript</title>
+	<meta charset="utf-8" />
+	<title>AJAX - Javascript</title>
 </head>
 
 <body>
-    <h1>Ajax - Javascript</h1>
-   <button onclick="pobierzDane()">Pobierz Dane</button>
-    <script src="js/ajax-skonczona-wersja.js"></script>
+	<h1>Ajax - Javascript</h1>
+	<button id="pobierz-dane">Pobierz Dane</button>
+<!--			onclik="pobierzdane()"-->
+
+
+
+
+
+
+	<script src="js/jquery-3.2.1.min.js"></script>
+<!--	<script src="js/ajax-skonczona-wersja.js"></script>-->
+	<script src="js/ajax-jquery.js"></script>
 </body>
 
 </html>
-
